--- a/index.html
+++ b/index.html
@@ -1741,6 +1741,83 @@
             background-color: #f0f0f0;
         }
 
+        /* Filter Guide Styles (Magnifying Glass) */
+        .filter-guide-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.05);
+            /* Very subtle overlay */
+            z-index: 10000;
+            cursor: pointer;
+        }
+
+        .magnifying-glass-container {
+            position: fixed;
+            pointer-events: none;
+            z-index: 10001;
+            transition: opacity 0.3s;
+            width: 120px;
+            height: 120px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .magnifying-glass {
+            position: relative;
+            width: 84px;
+            height: 84px;
+        }
+
+        .glass-circle {
+            width: 100%;
+            height: 100%;
+            border: 5px solid #007bff;
+            background: white;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 800;
+            color: #007bff;
+            font-size: 16px;
+            box-shadow: 0 8px 32px rgba(0, 123, 255, 0.4);
+            animation: pulse-guide 1.5s infinite ease-in-out;
+            position: relative;
+            z-index: 2;
+        }
+
+        .glass-handle {
+            position: absolute;
+            width: 12px;
+            height: 50px;
+            background: #007bff;
+            bottom: -25px;
+            right: -15px;
+            transform: rotate(-45deg);
+            border-radius: 6px;
+            z-index: 1;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        @keyframes pulse-guide {
+            0% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.15);
+                box-shadow: 0 12px 40px rgba(0, 123, 255, 0.6);
+            }
+
+            100% {
+                transform: scale(1);
+            }
+        }
+
         /* Zodiac Mode Styles */
         .zodiac-grid {
             display: grid;
@@ -2200,12 +2277,13 @@
             <div class="section">
                 <span class="section-title round-title">📅 회차 필터 (Round)</span>
                 <div class="input-row">
-                    <input type="number" id="minRound" value="1202">
+                    <input type="number" id="minRound" value="1">
                     <span>~</span>
                     <input type="number" id="maxRound" value="1211" max="1211"
                         oninput="if(parseInt(this.value) > 1211) this.value = 1211;">
                     <div class="recent-dropdown">
-                        <button class="dropdown-toggle" onclick="toggleRecentDropdown()">최근 10회</button>
+                        <button id="filterGuideAnchor" class="dropdown-toggle"
+                            onclick="toggleRecentDropdown()">전체</button>
                         <div id="recentDropdownMenu" class="dropdown-menu">
                             <div class="dropdown-item" onclick="setRecentNRounds(10)">최근 10회</div>
                             <div class="dropdown-item" onclick="setRecentNRounds(20)">최근 20회</div>
@@ -3767,6 +3845,60 @@
                 const displayText = n === 'all' ? '전체' : `최근${n}회차`;
                 showToast(`${currentMax}회 기준 ${displayText} 데이터로 갱신되었습니다.`, "success", false, 'filter-notice-toast');
             }
+        }
+
+        // ============ Filter Guide Logic ============
+        function showFilterGuide() {
+            const anchor = document.getElementById('filterGuideAnchor');
+            if (!anchor) return;
+
+            removeFilterGuide();
+
+            const rect = anchor.getBoundingClientRect();
+
+            const overlay = document.createElement('div');
+            overlay.id = 'filterGuideOverlay';
+            overlay.className = 'filter-guide-overlay';
+            overlay.onclick = removeFilterGuide;
+            overlay.ontouchstart = removeFilterGuide;
+
+            const container = document.createElement('div');
+            container.id = 'magnifyingGlassContainer';
+            container.className = 'magnifying-glass-container';
+
+            const centerX = rect.left + rect.width / 2;
+            const centerY = rect.top + rect.height / 2;
+
+            container.style.top = (centerY - 60) + 'px';
+            container.style.left = (centerX - 60) + 'px';
+
+            container.innerHTML = `
+                <div class="magnifying-glass">
+                    <div class="glass-circle">전체</div>
+                    <div class="glass-handle"></div>
+                </div>
+            `;
+
+            document.body.appendChild(overlay);
+            document.body.appendChild(container);
+
+            window.addEventListener('scroll', removeFilterGuide, { once: true });
+            setTimeout(removeFilterGuide, 10000);
+        }
+
+        function removeFilterGuide() {
+            const overlay = document.getElementById('filterGuideOverlay');
+            const container = document.getElementById('magnifyingGlassContainer');
+            if (overlay) overlay.remove();
+            if (container) container.remove();
+        }
+
+        if (document.readyState === 'complete') {
+            setTimeout(showFilterGuide, 2500);
+        } else {
+            window.addEventListener('load', () => {
+                setTimeout(showFilterGuide, 2500);
+            });
         }
 
         // 기존 setRecent10Rounds 함수 유지 (하위 호환성)
