--- a/index.html
+++ b/index.html
@@ -1759,8 +1759,8 @@
             pointer-events: none;
             z-index: 10001;
             transition: opacity 0.3s;
-            width: 120px;
-            height: 120px;
+            width: 90px;
+            height: 90px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -1768,14 +1768,14 @@
 
         .magnifying-glass {
             position: relative;
-            width: 84px;
-            height: 84px;
+            width: 63px;
+            height: 63px;
         }
 
         .glass-circle {
             width: 100%;
             height: 100%;
-            border: 5px solid #007bff;
+            border: 4px solid #007bff;
             background: white;
             border-radius: 50%;
             display: flex;
@@ -1783,8 +1783,8 @@
             justify-content: center;
             font-weight: 800;
             color: #007bff;
-            font-size: 16px;
-            box-shadow: 0 8px 32px rgba(0, 123, 255, 0.4);
+            font-size: 13px;
+            box-shadow: 0 6px 24px rgba(0, 123, 255, 0.4);
             animation: pulse-guide 1.5s infinite ease-in-out;
             position: relative;
             z-index: 2;
@@ -1792,15 +1792,15 @@
 
         .glass-handle {
             position: absolute;
-            width: 12px;
-            height: 50px;
+            width: 9px;
+            height: 38px;
             background: #007bff;
-            bottom: -25px;
-            right: -15px;
+            bottom: -19px;
+            right: -11px;
             transform: rotate(-45deg);
-            border-radius: 6px;
+            border-radius: 5px;
             z-index: 1;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+            box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
         }
 
         @keyframes pulse-guide {
@@ -3849,48 +3849,59 @@
 
         // ============ Filter Guide Logic ============
         function showFilterGuide() {
-            const anchor = document.getElementById('filterGuideAnchor');
-            if (!anchor) return;
+            const anchor1 = document.getElementById('filterGuideAnchor');
+            const anchor2 = document.getElementById('tierLegend');
 
             removeFilterGuide();
 
-            const rect = anchor.getBoundingClientRect();
-
+            // Create full-screen overlay to catch any click/touch outside
             const overlay = document.createElement('div');
             overlay.id = 'filterGuideOverlay';
             overlay.className = 'filter-guide-overlay';
             overlay.onclick = removeFilterGuide;
             overlay.ontouchstart = removeFilterGuide;
-
-            const container = document.createElement('div');
-            container.id = 'magnifyingGlassContainer';
-            container.className = 'magnifying-glass-container';
-
-            const centerX = rect.left + rect.width / 2;
-            const centerY = rect.top + rect.height / 2;
-
-            container.style.top = (centerY - 60) + 'px';
-            container.style.left = (centerX - 60) + 'px';
-
-            container.innerHTML = `
-                <div class="magnifying-glass">
-                    <div class="glass-circle">전체</div>
-                    <div class="glass-handle"></div>
-                </div>
-            `;
-
             document.body.appendChild(overlay);
-            document.body.appendChild(container);
+
+            // Helper to create individual magnifying glass
+            const createGlass = (anchor, text, id) => {
+                if (!anchor) return;
+                const rect = anchor.getBoundingClientRect();
+                const container = document.createElement('div');
+                container.id = id;
+                container.className = 'magnifying-glass-container';
+
+                // Centered positioning with new 90x90 container size
+                const centerX = rect.left + rect.width / 2;
+                const centerY = rect.top + rect.height / 2;
+
+                container.style.top = (centerY - 45) + 'px';
+                container.style.left = (centerX - 45) + 'px';
+
+                container.innerHTML = `
+                    <div class="magnifying-glass">
+                        <div class="glass-circle">${text}</div>
+                        <div class="glass-handle"></div>
+                    </div>
+                `;
+                document.body.appendChild(container);
+            };
+
+            // Show guides for both sections
+            createGlass(anchor1, "전체", "magnifyingGlass1");
+            createGlass(anchor2, "🔍", "magnifyingGlass2");
 
             window.addEventListener('scroll', removeFilterGuide, { once: true });
-            setTimeout(removeFilterGuide, 10000);
+            setTimeout(removeFilterGuide, 8000);
         }
 
         function removeFilterGuide() {
             const overlay = document.getElementById('filterGuideOverlay');
-            const container = document.getElementById('magnifyingGlassContainer');
             if (overlay) overlay.remove();
-            if (container) container.remove();
+
+            const g1 = document.getElementById('magnifyingGlass1');
+            const g2 = document.getElementById('magnifyingGlass2');
+            if (g1) g1.remove();
+            if (g2) g2.remove();
         }
 
         if (document.readyState === 'complete') {
