--- a/index.html
+++ b/index.html
@@ -2751,7 +2751,7 @@
         // Premium Roadview POV Presets (User Verified 260210)
         const ROADVIEW_PRESETS = [
             { name: "일등복권방", addr: "경기 시흥시 시청로68번길 4 1층 124호", panoId: 1175988907, pov: { pan: 43.68, tilt: 6.67, zoom: -2 }, customMessage: "매장은 건물 내부에 있음!!" },
-// --- Today's Finalized Legend Shops ---
+            // --- Today's Finalized Legend Shops ---
             { name: "복터진날", addr: "부산 사하구 장림로 162-1 복권판매점", panoId: 1202461118, pov: { pan: 131.58, tilt: 3.84, zoom: -1.0 } },
             { name: "대구연쇄점", addr: "부산 부산진구 중앙대로783번길 8", panoId: 1202521545, pov: { pan: 58.86, tilt: -0.64, zoom: 2.0 } },
             { name: "동일통신", addr: "부산 해운대구 반여1동 1361-2", panoId: 1202252207, pov: { pan: 96.27, tilt: 11.77, zoom: -3.0 } },
@@ -3820,10 +3820,12 @@
                         totalWins: d.totalWins, // This is the total wins for the shop
                         closed: d.closed, // Store closed status
                         pov: d.pov || null, // Capture POV if exists
+                        customMessage: d.customMessage || null, // Capture Custom Message if exists
                         rounds: [] // To store individual round details for infowindow
                     };
                 }
                 if (d.pov && !uniqueShops[key].pov) uniqueShops[key].pov = d.pov; // Sync POV
+                if (d.customMessage && !uniqueShops[key].customMessage) uniqueShops[key].customMessage = d.customMessage; // Sync message
                 uniqueShops[key].rounds.push({ r: d.r, m: d.m });
             });
 
@@ -3888,7 +3890,7 @@
                             ✨ 이번 주 1등 추천 번호 받기
                         </button>
                         <div class="iw-actions">
-                            <button class="btn-iw btn-navi" style="width:100%;" onclick="openRoadviewWithNavi(${shop.lat}, ${shop.lng}, '${safeName}', '${safeAddr}', ${shop.pov ? JSON.stringify(shop.pov).replace(/"/g, '&quot;') : 'null'})">
+                            <button class="btn-iw btn-navi" style="width:100%;" onclick="openRoadviewWithNavi(${shop.lat}, ${shop.lng}, '${safeName}', '${safeAddr}', ${shop.pov ? JSON.stringify(shop.pov).replace(/"/g, '&quot;') : 'null'}, '${(shop.customMessage || "").replace(/'/g, "\\'")}')">
                                 로드뷰(ROAD VIEW) 보기
                             </button>
                         </div>
@@ -5233,25 +5235,28 @@
                 address = arg4;
                 actionType = arg5;
                 actionData = arg6;
-                shop = { lat, lng, n: shopName, a: address }; // Mock shop object
+                shop = {
+                    lat, lng, n: shopName, a: address,
+                    customMessage: (actionData && actionData.customMessage) ? actionData.customMessage : null
+                };
 
-                // Fallback: If roadview_msg is missing, try to find the full shop object from global lottoData
-                if (!shop.roadview_msg && typeof lottoData !== 'undefined') {
-                    // Try to find the full shop object from global lottoData
-                    // Relaxed Search: Name match is primary
-                    const found = lottoData.find(s => s.n === shopName);
+                // Fallback: If customMessage is missing, try to find the full shop object from global allData
+                if (!shop.customMessage && typeof allData !== 'undefined') {
+                    // Try to find the full shop object from global allData
+                    const found = allData.find(s => s.n === shopName && (s.a === address || address.includes(s.a)));
                     if (found) {
                         shop = found;
                     }
                 }
-
             }
 
             // Emergency Hardcoded Check for '훼미리로또' to guarantee alert
             if (shopName.includes('훼미리로또') || (shop.n && shop.n.includes('훼미리로또'))) {
                 alert('훼미리마트는 CU보라매타운점으로 변경!!');
-            } else if (shop.roadview_msg) {
-                alert(shop.roadview_msg);
+            } else if (shop.customMessage) {
+                // If it's a critical message that needs an alert, uncomment below. 
+                // Currently it shows in the roadview overlay.
+                // alert(shop.customMessage);
             }
 
             // Lazy Initialization
@@ -5372,12 +5377,12 @@
             openRoadview(lat, lng, shopName, address, 'copy', address);
         }
 
-        function openRoadviewWithNavi(lat, lng, shopName, address, pov = null) {
+        function openRoadviewWithNavi(lat, lng, shopName, address, pov = null, customMessage = null) {
             if (shopName.includes('인터넷 복권판매사이트')) {
                 window.open('https://www.dhlottery.co.kr/userGuide', '_blank');
                 return;
             }
-            openRoadview(lat, lng, shopName, address, 'navi', { lat, lng, name: shopName, pov: pov });
+            openRoadview(lat, lng, shopName, address, 'navi', { lat, lng, name: shopName, pov: pov, customMessage: customMessage });
         }
 
         function openKakaoMap(lat, lng, shopName, address) {
