UI: Reduce mobile map height to reveal winning numbers

--- a/index.html
+++ b/index.html
@@ -1356,8 +1356,8 @@
 
             #map {
                 order: 1 !important;
-                height: calc(60vh + 10px) !important;
-                min-height: 410px !important;
+                height: calc(60vh - 10px) !important;
+                min-height: 380px !important;
             }
 
             h1 {
