--- a/index.html
+++ b/index.html
@@ -2755,8 +2755,7 @@
             { name: "일등복권방", addr: "경기 시흥시 시청로68번길 4 1층 124호", panoId: 1175988907, pov: { pan: 43.68, tilt: 6.67, zoom: -2 }, customMessage: "매장은 건물 내부에 있음!!" },
             // --- Today's Finalized Legend Shops ---
             { name: "복터진날", addr: "부산 사하구 장림로 162-1 복권판매점", panoId: 1202461118, pov: { pan: 131.58, tilt: 3.84, zoom: -1.0 } },
-            { name: "행복한사람들 (흥부네)", addr: "경기 광주시 곤지암읍 경충대", imageUrl: "assets/img/happypeople_260213.jpg" },
-            { name: "대구연쇄점", addr: "부산 부산진구 중앙대로783번길 8", panoId: 1202521545, pov: { pan: 58.86, tilt: -0.64, zoom: 2.0 } },
+            { name: "행복한사람들 (흥부네)", addr: "경기 광주시 곤지암읍 경충대", imageUrl: "happypeople.jpg" },
             { name: "대구연쇄점", addr: "부산 부산진구 중앙대로783번길 8", panoId: 1202521545, pov: { pan: 58.86, tilt: -0.64, zoom: 2.0 } },
             { name: "동일통신", addr: "부산 해운대구 반여1동 1361-2", panoId: 1202252207, pov: { pan: 96.27, tilt: 11.77, zoom: -3.0 } },
             { name: "싱글벙글 6/45", addr: "부산 연제구 연산동 1330-10 좌측 싱글벙글복권방", panoId: 1202572760, pov: { pan: 324.08, tilt: -3.02, zoom: 1.0 } },
@@ -5253,6 +5252,10 @@
                     }
                 }
             }
+
+            // Set Modal Title
+            const titleEl = document.getElementById('roadviewShopName');
+            if (titleEl) titleEl.textContent = shopName || '매장 로드뷰';
 
             // Emergency Hardcoded Check for '훼미리로또' to guarantee alert
             if (shopName.includes('훼미리로또') || (shop.n && shop.n.includes('훼미리로또'))) {
