Data: Update POV for Bokkwonnara (Final)

--- a/index.html
+++ b/index.html
@@ -2912,7 +2912,7 @@
                 { name: "행운복권방 보생당건강원", addr: "전북 익산시 무왕로 1268", panoId: 1179789585, pov: { pan: 168.69, tilt: -0.46, zoom: -2.0 } },
                 { name: "하늘로또", addr: "경기 여주시 세종로475번길", panoId: 1175070156, pov: { pan: 49.17, tilt: 3.23, zoom: 2.0 } },
                 { name: "빅세일복권방", addr: "부산 부산진구 서면문화로", panoId: 1202698289, pov: { pan: 104.61, tilt: -2.96, zoom: 3.0 } },
-                { name: "복권나라", addr: "서울 관악구 은천로", panoId: 1198290120, pov: { pan: 330.0, tilt: 8.0, zoom: 1.0 } },
+                { name: "복권나라", addr: "서울 관악구 은천로 40-1", panoId: 1198290120, pov: { pan: 181.43, tilt: 5.8, zoom: -2.0 } },
                 { name: "다니엘사", addr: "경기 안산시 단원구 원선1로 38 101호", panoId: 1204134596, pov: { pan: 356.2, tilt: -3.0, zoom: 4.0 } },
                 { name: "이마트24 순천산단점", addr: "전남 순천시 산단1길 6", panoId: 1173643437, pov: { pan: 257.9, tilt: 3.2, zoom: 3.0 } },
                 { name: "제이복권방", addr: "서울 종로구 종로5가", panoId: 1197815068, pov: { pan: 358.97, tilt: -5.13, zoom: -3.0 } },
