Fix: Synchronize and prioritize final POV for Bokkwonnara across all data sources

--- a/index.html
+++ b/index.html
@@ -5302,8 +5302,8 @@
                 // Let's define it here based on the shopName and address.
                 // Assuming ROADVIEW_PRESETS is a global array.
                 const foundPreset = ROADVIEW_PRESETS.find(p => p.name === shopName || (p.addr && address.includes(p.addr)));
-                // Prioritize shop.pov (dynamic from DB) over hardcoded ROADVIEW_PRESETS
-                const activePreset = shop.pov ? { panoId: shop.pov.id, pov: shop.pov } : (foundPreset || null);
+                // Prioritize hardcoded ROADVIEW_PRESETS (User Overrides) over shop.pov (DB)
+                const activePreset = foundPreset ? { panoId: foundPreset.panoId, pov: foundPreset.pov, imageUrl: foundPreset.imageUrl } : (shop.pov ? { panoId: shop.pov.id, pov: shop.pov } : null);
 
                 // Custom Message Sync
                 const msgOverlay = document.getElementById('roadview-message-overlay');
