--- a/index.html
+++ b/index.html
@@ -1797,6 +1797,128 @@
             justify-content: center;
             font-weight: 800;
             color: #007bff;
+        }
+
+        /* Admin Mode Styles (Hidden) */
+        #adminModeBtn {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background: rgba(211, 47, 47, 0.9);
+            color: white;
+            padding: 12px 18px;
+            border-radius: 25px;
+            font-weight: bold;
+            font-size: 14px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            z-index: 10002;
+            cursor: pointer;
+            display: none;
+            /* Only show in ?admin=y mode */
+            border: 2px solid white;
+            transition: transform 0.2s;
+        }
+
+        #adminModeBtn:active {
+            transform: scale(0.95);
+        }
+
+        .admin-modal-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            z-index: 10003;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        .admin-modal-content {
+            background: #f5f5f5;
+            width: 100%;
+            max-width: 450px;
+            height: 90vh;
+            border-radius: 20px;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .admin-header {
+            background: #fff;
+            padding: 15px 20px;
+            border-bottom: 1px solid #ddd;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .admin-search {
+            padding: 15px;
+            background: #fff;
+            border-bottom: 1px solid #ddd;
+        }
+
+        .admin-search input {
+            width: 100%;
+            padding: 12px;
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            font-size: 16px;
+            outline: none;
+            box-sizing: border-box;
+        }
+
+        .admin-list {
+            flex: 1;
+            overflow-y: auto;
+            padding: 10px;
+        }
+
+        .admin-shop-card {
+            background: #fff;
+            border-radius: 12px;
+            padding: 15px;
+            margin-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+        }
+
+        .admin-shop-name {
+            font-weight: bold;
+            font-size: 15px;
+            margin-bottom: 4px;
+        }
+
+        .admin-shop-addr {
+            font-size: 12px;
+            color: #666;
+            line-height: 1.4;
+        }
+
+        .admin-shop-win {
+            font-size: 11px;
+            color: var(--primary);
+            font-weight: bold;
+            margin-top: 4px;
+        }
+
+        .admin-close-btn {
+            background: var(--primary);
+            color: white;
+            border: none;
+            padding: 8px 12px;
+            border-radius: 6px;
+            font-size: 13px;
+            color: #007bff;
             font-size: var(--glass-font, 13px);
             box-shadow: 0 6px 24px rgba(0, 123, 255, 0.4);
             animation: pulse-guide 1.5s infinite ease-in-out;
@@ -5429,6 +5551,157 @@
                 return dist;
             }
         </script>
+        <script>
+            // ============ Admin Mode Logic (Embedded) ============
+            let admin_allShops = [];
+            let admin_githubToken = localStorage.getItem('gh_admin_token') || '';
+
+            function checkAdminMode() {
+                const urlParams = new URLSearchParams(window.location.search);
+                if (urlParams.get('admin') === 'y') {
+                    const btn = document.getElementById('adminModeBtn');
+                    if (btn) btn.style.display = 'block';
+                }
+            }
+
+            async function openAdminModal() {
+                document.getElementById('adminModal').style.display = 'flex';
+                if (!admin_githubToken) {
+                    const token = prompt('GitHub Personal Access Token(PAT)을 입력해주세요:');
+                    if (token) {
+                        admin_githubToken = token;
+                        localStorage.setItem('gh_admin_token', token);
+                    } else {
+                        closeAdminModal();
+                        return;
+                    }
+                }
+                if (admin_allShops.length === 0) {
+                    await admin_fetchLatestData();
+                } else {
+                    admin_renderShops(admin_allShops);
+                }
+            }
+
+            function closeAdminModal() {
+                document.getElementById('adminModal').style.display = 'none';
+            }
+
+            async function admin_fetchLatestData() {
+                admin_showLoading('데이터를 불러오는 중...');
+                try {
+                    const url = `https://raw.githubusercontent.com/integral81/lottomap/main/lotto_data.json?v=${Date.now()}`;
+                    const res = await fetch(url);
+                    if (!res.ok) throw new Error('데이터 실패');
+                    admin_allShops = await res.json();
+                    admin_renderShops(admin_allShops);
+                } catch (err) {
+                    alert('로드 실패: ' + err.message);
+                    closeAdminModal();
+                } finally {
+                    admin_hideLoading();
+                }
+            }
+
+            function admin_renderShops(shops) {
+                const container = document.getElementById('adminShopList');
+                const query = document.getElementById('adminSearchInput').value.toLowerCase().trim();
+
+                // Group to unique shops
+                const shopMap = {};
+                shops.forEach(s => {
+                    const key = `${s.n}|${s.a}`;
+                    if (!shopMap[key]) shopMap[key] = { ...s, winCount: 0 };
+                    shopMap[key].winCount++;
+                });
+
+                let list = Object.values(shopMap).sort((a, b) => b.winCount - a.winCount);
+                if (query) {
+                    list = list.filter(s => (s.n && s.n.toLowerCase().includes(query)) || (s.a && s.a.toLowerCase().includes(query)));
+                }
+
+                container.innerHTML = list.map(shop => `
+                    <div class="admin-shop-card">
+                        <div style="flex:1; margin-right:10px;">
+                            <div class="admin-shop-name">${shop.n} ${shop.closed ? '<span style="color:red; font-size:11px;">(폐업)</span>' : ''}</div>
+                            <div class="admin-shop-addr">${shop.a}</div>
+                            <div class="admin-shop-win">${shop.winCount}회 당첨</div>
+                        </div>
+                        <button class="admin-close-btn" ${shop.closed ? 'disabled' : ''} onclick="admin_markAsClosed('${shop.n}', '${shop.a}')">
+                            ${shop.closed ? '완료' : '폐점'}
+                        </button>
+                    </div>
+                `).join('');
+            }
+
+            async function admin_markAsClosed(name, addr) {
+                if (!confirm(`'${name}' 매장을 폐점 처리하시겠습니까?`)) return;
+
+                admin_showLoading('GitHub 업데이트 중...');
+                try {
+                    const getMeta = async (path) => {
+                        const res = await fetch(`https://api.github.com/repos/integral81/lottomap/contents/${path}`, {
+                            headers: { 'Authorization': `token ${admin_githubToken}` }
+                        });
+                        return await res.json();
+                    };
+
+                    const [jsonMeta, jsMeta] = await Promise.all([getMeta('lotto_data.json'), getMeta('lotto_data.js')]);
+
+                    // Update
+                    admin_allShops.forEach(s => { if (s.n === name && s.a === addr) s.closed = true; });
+
+                    const updateFile = async (path, content, sha) => {
+                        await fetch(`https://api.github.com/repos/integral81/lottomap/contents/${path}`, {
+                            method: 'PUT',
+                            headers: { 'Authorization': `token ${admin_githubToken}`, 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ message: `Admin: ${name} closed`, content: btoa(unescape(encodeURIComponent(content))), sha })
+                        });
+                    };
+
+                    await Promise.all([
+                        updateFile('lotto_data.json', JSON.stringify(admin_allShops, null, 2), jsonMeta.sha),
+                        updateFile('lotto_data.js', `var lottoData = ${JSON.stringify(admin_allShops, null, 2)};`, jsMeta.sha)
+                    ]);
+
+                    alert('처리 완료! 1~2분 후 사이트에 반영됩니다.');
+                    admin_renderShops(admin_allShops);
+                } catch (err) {
+                    alert('에러: ' + err.message);
+                } finally {
+                    admin_hideLoading();
+                }
+            }
+
+            function admin_showLoading(txt) {
+                document.getElementById('adminLoadingText').innerText = txt;
+                document.getElementById('adminLoading').style.display = 'flex';
+            }
+            function admin_hideLoading() { document.getElementById('adminLoading').style.display = 'none'; }
+
+            // Initialize Admin Check
+            checkAdminMode();
+        </script>
+
+        <!-- Admin UI Elements -->
+        <div id="adminModeBtn" onclick="openAdminModal()">폐점 관리자</div>
+        <div id="adminModal" class="admin-modal-overlay" onclick="closeAdminModal()">
+            <div class="admin-modal-content" onclick="event.stopPropagation()">
+                <div class="admin-header">
+                    <h3 style="margin:0;">🚀 폐점 관리</h3>
+                    <span style="font-size:24px; cursor:pointer;" onclick="closeAdminModal()">&times;</span>
+                </div>
+                <div class="admin-search">
+                    <input type="text" id="adminSearchInput" placeholder="매장명/주소 검색..."
+                        oninput="admin_renderShops(admin_allShops)">
+                </div>
+                <div id="adminShopList" class="admin-list"></div>
+                <div id="adminLoading" class="admin-loading-overlay">
+                    <div class="spinner" style="border-top-color:red;"></div>
+                    <div id="adminLoadingText">처리 중...</div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
