--- a/index.html
+++ b/index.html
@@ -1802,21 +1802,26 @@
         /* Admin Mode Styles (Hidden) */
         #adminModeBtn {
             position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: rgba(211, 47, 47, 0.9);
+            bottom: 120px;
+            /* Up enough to clear standard navigation bars */
+            left: 20px;
+            /* Left side to avoid Kakao Map controls on right */
+            background: #ff5722;
+            /* More noticeable orange-red */
             color: white;
-            padding: 12px 18px;
-            border-radius: 25px;
-            font-weight: bold;
-            font-size: 14px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            z-index: 10002;
+            padding: 14px 20px;
+            border-radius: 30px;
+            font-weight: 900;
+            font-size: 15px;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.4);
+            z-index: 99999;
+            /* Extremely high to be on top of everything */
             cursor: pointer;
             display: none;
             /* Only show in ?admin=y mode */
             border: 2px solid white;
-            transition: transform 0.2s;
+            transition: all 0.3s;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
         }
 
         #adminModeBtn:active {
@@ -1918,12 +1923,56 @@
             padding: 8px 12px;
             border-radius: 6px;
             font-size: 13px;
+            font-weight: bold;
+        }
+
+        .admin-close-btn:disabled {
+            background: #ccc;
+        }
+
+        .admin-loading-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.8);
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 10;
+        }
+
+        .glass-circle {
+            width: 100%;
+            height: 100%;
+            border: 4px solid #007bff;
+            background: white;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 800;
             color: #007bff;
             font-size: var(--glass-font, 13px);
             box-shadow: 0 6px 24px rgba(0, 123, 255, 0.4);
             animation: pulse-guide 1.5s infinite ease-in-out;
             position: relative;
             z-index: 2;
+        }
+
+        @keyframes pulse-guide {
+
+            0%,
+            100% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.1);
+                box-shadow: 0 8px 30px rgba(0, 123, 255, 0.5);
+            }
         }
 
         .glass-handle {
@@ -5554,28 +5603,20 @@
         <script>
             // ============ Admin Mode Logic (Embedded) ============
             let admin_allShops = [];
-            let admin_githubToken = localStorage.getItem('gh_admin_token') || '';
+            // Hardcoded Token as requested by user
+            const admin_githubToken = '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';
 
             function checkAdminMode() {
                 const urlParams = new URLSearchParams(window.location.search);
                 if (urlParams.get('admin') === 'y') {
                     const btn = document.getElementById('adminModeBtn');
                     if (btn) btn.style.display = 'block';
+                    console.log('Admin mode activated via URL parameter');
                 }
             }
 
             async function openAdminModal() {
                 document.getElementById('adminModal').style.display = 'flex';
-                if (!admin_githubToken) {
-                    const token = prompt('GitHub Personal Access Token(PAT)을 입력해주세요:');
-                    if (token) {
-                        admin_githubToken = token;
-                        localStorage.setItem('gh_admin_token', token);
-                    } else {
-                        closeAdminModal();
-                        return;
-                    }
-                }
                 if (admin_allShops.length === 0) {
                     await admin_fetchLatestData();
                 } else {
