Add Google Analytics tracking code to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6EHVR64BXD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-6EHVR64BXD');
+    </script>
     <meta charset="utf-8">
     <title>KINOV 로또 명당 지도</title>
     <!-- Library for QR Code Scanning -->
