--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
         gtag('config', 'G-6EHVR64BXD');
     </script>
+    <script type="text/javascript">
+        (function (c, l, a, r, i, t, y) {
+            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+        })(window, document, "clarity", "script", "vjq8hwz5un");
+    </script>
+
     <meta charset="utf-8">
     <title>KINOV 로또 명당 지도</title>
     <!-- Library for QR Code Scanning -->
