--- a/admin_pov.html
+++ b/admin_pov.html
@@ -315,59 +315,12 @@
                 if (item.pov && (item.pov.id || item.pov.panoid)) mapObj[key].pov = item.pov;
             });
 
-            const TARGET_LIST = [
-                { n: "다니엘사", a: "경기 안산시 단원구 초지동 796" },
-                { n: "천하명당복권방", a: "충남 홍성군 홍성읍 오관리 321-4" },
-                { n: "행복충전소", a: "경기 평택시 청북읍 현곡리 286" },
-                { n: "로또복권두정점", a: "충남 천안시 서북구 두정로 251 대원빌딩104호" },
-                { n: "알리바이", a: "광주 광산구 수등로 253 1층 알리바이" },
-                { n: "올인 (all in)", a: "경기 화성시 3.1만세로 1147" },
-                { n: "로또킹", a: "서울 영등포구 영중로 2 1층" },
-                { n: "에스비 상사", a: "서울 중구 퇴계로86길 29" },
-                { n: "대박마트복권방", a: "충남 아산시 음봉로 844 태화상가1층103호" },
-                { n: "썬마트", a: "충북 청주시 흥덕구 진재로23번길 25" },
-                { n: "명당골복권방", a: "경기 수원시 권선구 동수원로242번길 15 104호" },
-                { n: "오케이상사", a: "서울 서초구 신반포로 176" },
-                { n: "미나식품(로또판매점)", a: "서울 강서구 금낭화로 91-12" },
-                { n: "버스표가판점", a: "경기 안양시 동안구 호계동 1039-2" },
-                { n: "복권백화점", a: "경기 파주시 금촌2동 329-135" },
-                { n: "돈벼락맞는곳", a: "부산 동구 범일동 833-5번지" },
-                { n: "목화휴게소", a: "경남 사천시 사천대로 912" },
-                { n: "영화유통(1등복권방)", a: "경북 포항시 북구 양학천로 15" },
-                { n: "중구-가로가판대-37", a: "서울 중구 남대문로 20-2" },
-                { n: "천하명당복권방", a: "경기 수원시 팔달구 매산로 2" },
-                { n: "일등복권편의점", a: "대구 달서구 본리동 2-16번지 1층" },
-                { n: "행운복권방 보생당건강원", a: "전북 익산시 무왕로 1268" },
-                { n: "행운복권방", a: "경기 포천시 솔모루로 86-1" },
-                { n: "잠실매점", a: "서울 송파구 올림픽로 269 1층 잠실역 8번출구 앞" },
-                { n: "세진전자통신", a: "대구 서구 서대구로 376" },
-                { n: "천하명당복권방", a: "경남 거제시 옥포성안로 60" },
-                { n: "NG24", a: "경북 칠곡군 북중리3길 59" },
-                { n: "대박천하마트", a: "인천 부평구 굴포로 48" },
-                { n: "종합복권슈퍼", a: "경기 시흥시 마유로 336 정일빌딩104" },
-                { n: "행복한사람들 (흥부네)", a: "경기 광주시 곤지암읍 경충대로 763" },
-                { n: "묵동식품", a: "서울 중랑구 동일로 919" },
-                { n: "다모아복권", a: "서울 구로구 오류동 315-14" },
-                { n: "천하명당복권", a: "대구 북구 칠곡중앙대로 545" },
-                { n: "한꿈복권방", a: "울산 중구 번영로 586" },
-                { n: "노다지복권방", a: "경기 용인시 처인구 금령로 130" },
-                { n: "또또복권방", a: "전북 익산시 고봉로32길 3" },
-                { n: "제이복권방", a: "서울 종로구 종로5가 58 평창빌딩 1층 103호" },
-                { n: "알리바이(나주점)", a: "전남 나주시 나주로 142 알리바이" },
-                { n: "종합가판점", a: "서울 동대문구 왕산로 206 가로판매대" },
-                { n: "현대장미슈퍼", a: "전북 익산시 동서로61길 41 어양동 현대A 상가동 108호" },
-                { n: "버스표판매소", a: "경기 고양시 덕양구 화신로 76 샘터마을1단지아파트 971선" },
-                { n: "행운의집제1호점", a: "경북 안동시 경동로 663" },
-                { n: "복권명당(서부점)", a: "대구 달서구 월배로 452" },
-                { n: "라이프마트", a: "인천 중구 연안부두로53번길 36 5호" },
-                { n: "갈렙분식한식", a: "서울 중랑구 용마산로115길 92" },
-                { n: "버스판매소", a: "서울 영등포구 영중로 13 신세계앞" }
-            ];
+            const NEW_LEGENDS = ["다니엘사", "천하명당복권방", "행복충전소", "로또복권두정점", "알리바이", "올인 (all in)", "로또킹", "에스비 상사", "대박마트복권방", "썬마트", "명당골복권방", "오케이상사", "미나식품(로또판매점)", "버스표가판점", "복권백화점", "돈벼락맞는곳", "목화휴게소", "영화유통(1등복권방)", "중구-가로가판대-37", "일등복권편의점", "행운복권방 보생당건강원", "행운복권방", "잠실매점", "세진전자통신", "NG24", "대박천하마트", "종합복권슈퍼", "행복한사람들 (흥부네)", "묵동식품", "다모아복권", "천하명당복권", "한꿈복권방", "노다지복권방", "또또복권방", "제이복권방", "알리바이(나주점)", "종합가판점", "현대장미슈퍼", "버스표판매소", "행운의집제1호점", "복권명당(서부점)", "라이프마트", "갈렙분식한식", "버스판매소"];
 
             const list = Object.values(mapObj)
                 .filter(s => {
-                    const isTarget = TARGET_LIST.some(t => t.n === s.name && s.address.includes(t.a.substring(0, 15)));
-                    return isTarget && !s.hidden && !s.closed;
+                    const isNewLegend = NEW_LEGENDS.includes(s.name);
+                    return isNewLegend && !s.hidden && !s.closed;
                 })
                 .map(s => {
                     s.dist = getDistanceFromLatLonInKm(SEOUL.lat, SEOUL.lng, s.lat, s.lng);
